--- a/special_participation_site/index.html
+++ b/special_participation_site/index.html
@@ -15,6 +15,14 @@
             Curated views of EECS 182 "special participation A" posts where students used LLMs to evaluate homework problems.
           </p>
         </div>
+        <div class="appearance-control">
+          <label for="theme-mode">Appearance</label>
+          <select id="theme-mode">
+            <option value="auto">Auto</option>
+            <option value="light">Light</option>
+            <option value="dark">Dark</option>
+          </select>
+        </div>
       </div>
     </header>
 
