added model homework insights

--- a/special_participation_site/index.html
+++ b/special_participation_site/index.html
@@ -186,19 +186,9 @@
           >
             <h2>Homework insights</h2>
             <p class="small-muted">
-              High-level summaries of how different models performed on each homework. This
-              section is a template; a separate script populates the metrics.
+              AI-generated summaries of how different models performed on each homework assignment.
             </p>
-            <div class="insights-grid">
-              <article class="insight-card">
-                <h3>Homework-level insights</h3>
-                <p>
-                  Placeholder for narrative annotations and explanations of how different models
-                  performed on each homework.
-                </p>
-                <div id="homework-insights-body" class="insights-body"></div>
-              </article>
-            </div>
+            <div id="homework-insights-body" class="insights-body"></div>
           </section>
 
           <section
@@ -211,19 +201,9 @@
           >
             <h2>Model insights</h2>
             <p class="small-muted">
-              Summaries of how each model performed across all homeworks. This section is a
-              template; a separate script populates the metrics.
+              AI-generated summaries of how each model performed across all homework assignments.
             </p>
-            <div class="insights-grid">
-              <article class="insight-card">
-                <h3>Model-level insights</h3>
-                <p>
-                  Placeholder for narrative annotations and explanations of how each model
-                  performed overall across homeworks.
-                </p>
-                <div id="model-insights-body" class="insights-body"></div>
-              </article>
-            </div>
+            <div id="model-insights-body" class="insights-body"></div>
           </section>
         </div>
       </div>
