ai generated insights

--- a/special_participation_site/index.html
+++ b/special_participation_site/index.html
@@ -57,16 +57,6 @@
               <select id="filter-model"></select>
             </label>
 
-            <label>
-              <span>Primary focus</span>
-              <select id="filter-focus"></select>
-            </label>
-
-            <label>
-              <span>Actionability</span>
-              <select id="filter-actionability"></select>
-            </label>
-
             <label class="search-label">
               <span>Search</span>
               <input
@@ -82,7 +72,8 @@
                 <option value="newest">Newest first</option>
                 <option value="oldest">Oldest first</option>
                 <option value="depth">Depth (high → low)</option>
-                <option value="actionability">Actionability (high → low)</option>
+                <option value="homework">Homework (ascending)</option>
+                <option value="model">Model (A-Z)</option>
               </select>
             </label>
           </div>
