--- a/special_participation_site/index.html
+++ b/special_participation_site/index.html
@@ -9,6 +9,7 @@
   <body>
     <header class="site-header">
       <div class="site-header-inner">
+        <img src="img/neuralnet.png" alt="Neural network illustration" class="header-logo" />
         <div>
           <h1>Special Participation A Explorer</h1>
           <p class="subtitle">
