chat light/dark text fix again

--- a/special_participation_site/index.html
+++ b/special_participation_site/index.html
@@ -213,10 +213,13 @@
             aria-labelledby="tab-homework"
             hidden
           >
-            <h2>📚 Homework Insights</h2>
-            <p class="small-muted">
-              AI-generated summaries of how different models performed on each homework assignment.
-            </p>
+            <div class="insights-header">
+              <h2>📚 Homework Insights</h2>
+              <p class="small-muted">
+                AI-generated summaries analyzing how different models performed on each homework assignment. 
+                Discover patterns, strengths, and areas where models struggled.
+              </p>
+            </div>
             <div id="homework-insights-body" class="insights-body"></div>
           </section>
 
@@ -228,10 +231,13 @@
             aria-labelledby="tab-models"
             hidden
           >
-            <h2>🤖 Model Insights</h2>
-            <p class="small-muted">
-              AI-generated summaries of how each model performed across all homework assignments.
-            </p>
+            <div class="insights-header">
+              <h2>🤖 Model Insights</h2>
+              <p class="small-muted">
+                AI-generated summaries of how each model performed across all homework assignments. 
+                Compare strengths, weaknesses, and student sentiments for each AI model.
+              </p>
+            </div>
             <div id="model-insights-body" class="insights-body"></div>
           </section>
 
