--- a/special_participation_site/index.html
+++ b/special_participation_site/index.html
@@ -437,8 +437,7 @@
 
     <footer class="site-footer">
       <p>
-        Built as a lightweight, static explorer for EECS 182 special participation posts.
-        Data never leaves your machine.
+        Built by Etaash Patel, Jason Trinh, Kevin Tseng, and Justin Yang
       </p>
     </footer>
 
